<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/buttonLoginFaceTest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_top_login_title"
        android:layout_marginRight="@dimen/margin_top_login_title"
        android:background="@drawable/btn_facebook"
        android:text="@string/facebook"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/buttonLoginGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonLoginGoogleTest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_top_login_title"
        android:layout_marginRight="@dimen/margin_top_login_title"
        android:background="@drawable/btn_google"
        android:text="@string/google"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogOutFace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLoginFaceTest" />

    <Button
        android:id="@+id/buttonLogOutFace"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_top_login_title"
        android:layout_marginRight="@dimen/margin_top_login_title"
        android:background="@drawable/btn_facebook"
        android:text="@string/facebook_logout"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogOutGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLoginGoogleTest" />

    <Button
        android:id="@+id/buttonLogOutGoogle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_top_login_title"
        android:layout_marginRight="@dimen/margin_top_login_title"
        android:background="@drawable/btn_google"
        android:text="@string/google_logout"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogOutFace" />

</androidx.constraintlayout.widget.ConstraintLayout>